# historia

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/prompts/: speckit.constitution.prompt.md
.github/workflows/: build_and_upload_docker_image_dev.yml  build_and_upload_docker_image_latest.yml  daily_link_checker.yml  daily_tests.yml  release_pypi.yml  testing.yml  testing_pr.yml  testing_remote.yml  version_check.yml
.specify/: init-options.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
containers/: Dockerfile.dev  Dockerfile.latest
docs/: .readthedocs.yaml  README.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: index.rst
docs/development/: index.md
docs/installation/: index.md
docs/tutorial/: conftest.py  index.md
src/historia/: __init__.py  _add_to_project.py  _cli.py  _create_project.py  _dump.py  _fetch_info.py  _globals.py  _input_validation.py  _minify.py  _update.py
src/historia/data/: __init__.py  github.py  update.py
src/historia/data/github/: __init__.py  _dump.py  _fetch_info.py  _update.py
src/historia/project/: __init__.py  update.py
tests/: test_add_to_project.py  test_add_to_project_integration.py  test_api_fetch.py  test_api_submodules.py  test_cli.py  test_collect_unique_urls.py  test_create_project.py  test_input_type_checking.py  test_tutorial_docs.py
tests/test_dump/: test_graphql_api_dump.py  test_rest_api_dump.py
