[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/historia"]



[project]
name = "historia"
version = "0.5.9"
authors = [
  { name="Cody Baker", email="cody.c.baker.phd@gmail.com" },
]
description = "Collects GitHub activity for use in project dashboards."
readme = "README.md"
keywords = [
    "GitHub",
    "work history",
    "data collection",
    "project management",
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tqdm",
    "pytest",
    "pre-commit",
    "ipython",
    "rich-click",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
historia = "historia._cli:historia_cli"

[dependency-groups]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=4.0",
    "sphinx-tabs>=3.4",
    "sphinx-copybutton>=0.5",
]



[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  "*/__init__.py",
]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstring style: prefer the D213 / D211 conventions (multi-line summary
    # on the second line, no blank line before class docstrings) over their
    # mutually-exclusive counterparts D212 / D203
    "D203",
    "D212",
    # CLI commands and utilities deliberately use `print()` for user-facing
    # output rather than going through the logging system
    "T201",
    # `verbose: bool = True` and similar positional boolean flags are part of
    # the established public API surface (e.g. `historia.data.github.dump`)
    "FBT001",
    "FBT002",
    # Common HTTP status codes (200, 403, ...) and other small integer
    # literals are clearer inline than as named module-level constants
    "PLR2004",
    # `add_to_project` exceeds the branch / complexity thresholds because it
    # dispatches over a large GraphQL response shape; refactoring would
    # obscure the linear flow without simplifying the logic
    "C901",
    "PLR0912",
    # Long, descriptive messages constructed at the raise site are preferred
    # over per-call-site exception subclasses for one-off internal errors
    "TRY003",
    # `pytest.warns(UserWarning)` without a `match=` is intentional in places
    # where any UserWarning is acceptable
    "PT030",
    # Comments and docstrings intentionally use Unicode characters
    # (en-dashes, multiplication signs, ...) in fixture descriptions
    "RUF003",
    # `tests/` and `docs/` are deliberately not Python packages and do not
    # carry `__init__.py` files
    "INP001",
    # We use relative imports within the package (see developer guide)
    "TID252",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# `docs/conf.py` is the Sphinx configuration entry point: `copyright` is the
# Sphinx-required variable name (shadows a builtin) and the file does not
# require its own module docstring
"docs/conf.py" = ["A001", "D100"]
# Tests rely on `assert` (S101), commonly access private members (SLF001),
# omit per-module/per-function docstrings (D100, D103), reference predictable
# temp paths in fixtures (S108), raise simple exceptions with messages
# constructed at the raise site (TRY003), and may carry TODO comments without
# strict author/issue-link format (FIX002, TD002, TD003)
"tests/**/*.py" = [
    "S101",
    "S108",
    "SLF001",
    "D100",
    "D103",
    "TRY003",
    "FIX002",
    "TD002",
    "TD003",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ai_generated: mark test as AI-generated",
]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["historia"]

[tool.mypy]
python_version = "3.10"
files = ["src/historia"]
