[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/historia"]



[project]
name = "historia"
version = "0.10.6"
authors = [
  { name="Cody Baker", email="cody.c.baker.phd@gmail.com" },
]
description = "Collects GitHub activity for use in project dashboards."
readme = "README.md"
keywords = [
    "GitHub",
    "work history",
    "data collection",
    "project management",
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "beartype",
    "requests",
    "tqdm",
    "rich-click",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
historia = "historia._cli:historia_cli"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "ipython",
    "sybil",
]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=4.0",
    "sphinx-tabs>=3.4",
    "sphinx-copybutton>=0.5",
]



[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  "*/__init__.py",
]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstring style: prefer the D213 / D211 conventions
    "D203",
    "D212",
    # Commands deliberately use `print` or `.echo` instead of logging
    "T201",
    # Common HTTP status codes (200, 403, ...) and other small integer
    # literals are clearer inline than as named module-level constants
    "PLR2004",
    # GraphQL uses exceeds the branch / complexity thresholds; unavoidable
    "C901",
    "PLR0912",
    # Long, descriptive messages constructed at the raise site are preferred
    # over per-call-site exception subclasses for one-off internal errors
    "TRY003",
    # Fine to use Unicode characters
    "RUF003",
    # `tests/` and `docs/` are deliberately not Python packages
    "INP001",
    # We use relative imports within the package (see developer guide)
    "TID252",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# `docs/conf.py` is the Sphinx configuration entry point: `copyright` is the
# Sphinx-required variable name (shadows a builtin) and the file does not
# require its own module docstring
"docs/conf.py" = ["A001", "D100"]
# Tests rely on `assert` (S101), commonly access private members (SLF001),
# omit per-module/per-function docstrings (D100, D103), and reference
# predictable temp paths in fixtures (S108)
"tests/**/*.py" = [
    "S101",
    "S108",
    "SLF001",
    "D100",
    "D103",
    "FBT001",
]
# Tutorial conftest accesses private CLI members (SLF001) and omits per-function
# docstrings for Sybil setup/teardown/evaluator helpers (D103)
"docs/tutorial/conftest.py" = ["SLF001", "D103"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs/tutorial"]
markers = [
    "ai_generated: mark test as AI-generated",
    "remote: mark test as requiring live remote services",
]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["historia"]

[tool.mypy]
python_version = "3.10"
files = ["src/historia"]
